# Ecosys

./: .gitignore  CMakeLists.txt  README.md
apps/cli/: main.cpp  observe.cpp
docs/superpowers/specs/: 2026-06-30-engine-spec-v1-design.md  2026-07-02-ecosys-god-game-design.md
engine/core/: Event.hpp  Organism.cpp  Organism.hpp
engine/ecology/: Explorer.cpp  Explorer.hpp  Genome.hpp  Grazer.cpp  Grazer.hpp  Predator.cpp  Predator.hpp  RelationGraph.cpp  RelationGraph.hpp  Species.hpp
engine/interpreter/: Interpreter.cpp  Interpreter.hpp
engine/observer/: Observer.cpp  Observer.hpp  ProcReader.cpp  ProcReader.hpp  ProcessInfo.hpp
engine/simulation/: World.cpp  World.hpp  Zone.hpp
tests/: engine_tests.cpp  observer_tests.cpp
tui/: main.cpp
web/: main.cpp
web/static/: index.html
